--- a/Lambda.yaml
+++ b/Lambda.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: SNS-SQS
+Description: Lambda
 
 Parameters:
   ProjectName:
@@ -9,55 +9,11 @@ Parameters:
   TopicRegion:
     Type: String
     Default: us-east-2
+  DbName:
+    Type: String
+    Default: bikesdb
 
 Resources:
-  SnsSyncTopic:
-    Type: AWS::SNS::Topic
-    Properties:
-      TopicName: !Sub "${ProjectName}"
-      Tags:
-        - Key: Name
-          Value: !Sub "${ProjectName}"
-
-  SyncTopicSubscription:
-    Type: AWS::SNS::Subscription
-    UpdateReplacePolicy: Delete
-    DeletionPolicy: Delete
-    Properties:
-      Endpoint: !GetAtt SqsSyncQueue.Arn
-      Protocol: sqs
-      TopicArn: !Ref SnsSyncTopic
-      Region: !Ref TopicRegion
-
-  SqsSyncQueue:
-    Type: AWS::SQS::Queue
-    UpdateReplacePolicy: Delete
-    DeletionPolicy: Delete
-    Properties:
-      QueueName: !Sub "${ProjectName}"
-      Tags:
-        - Key: Name
-          Value: !Sub "${ProjectName}"
-
-  QueuePolicy:
-    Type: AWS::SQS::QueuePolicy
-    Properties:
-      PolicyDocument:
-        Version: "2012-10-17"
-        Id: QueuePolicyId
-        Statement:
-        - Sid: Allow-SNS-SendMessage
-          Effect: Allow
-          Principal: 
-            Service: sns.amazonaws.com
-          Action: sqs:SendMessage
-          Resource: !Ref SqsSyncQueue
-          Condition:
-            ArnEquals: 
-              aws:SourceArn: !Ref SnsSyncTopic
-      Queues:
-        - !Ref SqsSyncQueue
-
   LambdaNosqlSyncRole:
     Type: AWS::IAM::Role
     Properties:
@@ -111,16 +67,54 @@ Resources:
       Roles:
         - !Ref LambdaNosqlSyncRole
 
+  LambdaSecretPolicy:
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: LambdaRdsSecretPolicy
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Action: "secretsmanager:GetSecretValue"
+            Resource: !ImportValue BikesDbSecretExport
+      Roles:
+        - !Ref LambdaNosqlSyncRole
+
   NosqlSyncLamda:
     Type: "AWS::Lambda::Function"
     UpdateReplacePolicy: Delete
     DeletionPolicy: Delete
+    DependsOn: LambdaNosqlSyncPolicy
     Properties:
       FunctionName: NosqlSyncLamda
-      Handler: lambda/index.handler
+      VpcConfig:
+        SecurityGroupIds: 
+          - !ImportValue RdsSecurityGroupExport
+          - !ImportValue Ec2IntanceSecurityGroupExport
+        SubnetIds: 
+          - !ImportValue RdsSubnet1
+          - !ImportValue RdsSubnet2
+      
+      Environment:
+        Variables:
+          USER_NAME: "{{resolve:secretsmanager:BikesDbSecret:SecretString:username}}"
+          PASSWORD: "{{resolve:secretsmanager:BikesDbSecret:SecretString:password}}"
+          DB_NAME:  !Ref DbName
+          RDS_HOST: !ImportValue RdsMysqlDbExport
+          
+      Handler: lambda_function.lambda_handler
       Role: !GetAtt LambdaNosqlSyncRole.Arn
       Code:
         S3Bucket: ltm893-lambdas
         S3Key: lambda_function.zip
-      Runtime: python3.10.x
+      Runtime: python3.9
       Timeout: 300
+
+  LambdaSqsMapping:
+    Type: AWS::Lambda::EventSourceMapping
+    Properties:
+      EventSourceArn: !ImportValue LambdaSyncQueueArn
+      FunctionName: !Ref NosqlSyncLamda
+      Enabled: true
+
+    
